--- a/image_processing.ipynb
+++ b/image_processing.ipynb
@@ -72,20 +72,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mJupyter cannot be started. Error attempting to locate jupyter: Running cells with 'Python 3.10.1 64-bit' requires jupyter and notebook package.\n",
-      "Run the following command to install 'jupyter and notebook' into the Python environment. \n",
-      "Command: '/usr/bin/python3 -m pip install jupyter notebook -U'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   }
  ],
@@ -99,8 +97,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.2"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
