--- a/image_processing.ipynb
+++ b/image_processing.ipynb
@@ -39,24 +39,24 @@
     "\n",
     "2) transformation \n",
     "\n",
-    "    * simple linear transformation (normalization method)\n",
+    "- simple linear transformation (normalization method)\n",
     "\n",
     "\n",
-    "    $f^{-1}(y) = (y - y_{min})*(255-0)/(y_{max}-y_{min})$\n",
+    "$f^{-1}(y) = (y - y_{min})*(255-0)/(y_{max}-y_{min})$\n",
     "\n",
     "    \n",
-    "    * non-linear transformation, ex, gamma correction\n",
+    "- non-linear transformation, ex, gamma correction\n",
     "\n",
     "    \n",
-    "    $y = c*c^\\gamma$  \n",
+    "$y = c*c^\\gamma$  \n",
     "\n",
     "    \n",
-    "    $\\gamma$ < 1 gives more contrast.\n",
+    "$\\gamma$ < 1 gives more contrast.\n",
     "    \n",
     "    \n",
-    "    * free-form brightness transformation\n",
+    "- free-form brightness transformation\n",
     "    \n",
-    "    * histogram equalizzation"
+    "- histogram equalizzation"
    ]
   },
   {
